# Bobobot_instagram

./: .env.example  .gitignore  AUDIENCE_TRACKING_COMPLETE.md  AUDIENCE_TRACKING_IMPLEMENTATION.md  CRYPTOBOT_INTEGRATION_COMPLETE.md  Dockerfile  ENHANCEMENTS_COMPLETE.md  FINAL_CHECKLIST.md  FINAL_INTEGRATION_STATUS.md  FULL_HANDLERS_LIST.md  FULL_INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_FINAL.md  INTEGRATION_STATUS.md  MIGRATION_100_PERCENT_COMPLETE.md  MIGRATION_100_PERCENT_FINAL.md  MIGRATION_ANALYSIS_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETION_PLAN.md  OPTIONAL_FEATURES_COMPLETE.md  PRESENTATION_LAYER_COMPLETE.md  PRESENTATION_LAYER_PROGRESS.md  PROGRESS_CHECKLIST.md  QUICK_MIGRATION_SUMMARY.md  QUICK_START.md  QUICK_STATUS.md  RATE_LIMITING_AND_TRACKING_UI_COMPLETE.md  README.md  README_FINAL.md  REFERRAL_SYSTEM_IMPLEMENTATION.md  REQUEST_LOGGING_COMPLETE.md  SESSION_COMPLETE_2026_03_08_FINAL.md  SESSION_FINAL_2026_03_08.md  SESSION_SUMMARY_2026_03_08.md  SESSION_SUMMARY_2026_03_08_FINAL.md  SESSION_SUMMARY_2026_03_08_REFERRAL.md  START_BOT.md  START_HERE.md  alembic.ini  docker-compose.yml  (+2 more)
alembic/: env.py
alembic/versions/: 003_create_subscriptions_table.py  004_create_payments_table.py  20260308_0001_create_users_table.py  20260308_1436_create_audience_tracking_table.py  20260308_1515_create_referrals_table.py  20260308_1535_create_instagram_requests_table.py
docs/architecture/: ARCHITECTURE_OVERVIEW.md
docs/instagram_integration/: INFRASTRUCTURE_LAYER.md
scripts/: setup.ps1  setup.sh
tests/: conftest.py  test_smoke.py
(+384 files in other folders)
